--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "angular-resource": "~1.3.2",
     "angular-route": "~1.3.2",
     "angular-http-auth": "~1.2.2",
-    "angular-cookies": "~1.2.3"
+    "angular-cookies": "~1.2.3",
+    "angular-local-storage": "~0.1.5"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.2",
