--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,9 @@
     "angular-route": "~1.3.2",
     "angular-http-auth": "~1.2.2",
     "angular-cookies": "~1.2.3",
-    "angular-local-storage": "~0.1.5"
+    "angular-local-storage": "~0.1.5",
+    "x2js": "*",
+    "angular-x2js": "~0.1.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.2",
@@ -27,4 +29,3 @@
     "angular-scenario": "~1.3.2"
   }
 }
-
