Jersey client dependency in pom

--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,12 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-client</artifactId>
+            <version>1.17</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
 </project>
