--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "angular-local-storage": "~0.1.5",
     "x2js": "*",
     "angular-x2js": "~0.1.1"
+    "fontawesome": "~4.1.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.2",
