--- a/bower.json
+++ b/bower.json
@@ -12,8 +12,9 @@
     "angular-cookies": "~1.2.3",
     "angular-local-storage": "~0.1.5",
     "x2js": "*",
-    "angular-x2js": "~0.1.1"
-    "fontawesome": "~4.1.0"
+    "angular-x2js": "~0.1.1",
+    "fontawesome": "~4.1.0",
+    "d3": "3.5.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.2",
