--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "x2js": "*",
     "angular-x2js": "~0.1.1",
     "fontawesome": "~4.1.0",
-    "d3": "3.5.2"
+    "d3": "3.5.2",
+    "ng-table": "~0.3.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.2",
