--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "angular-x2js": "~0.1.1",
     "fontawesome": "~4.1.0",
     "d3": "3.5.2",
-    "ng-table": "~0.3.3"
+    "ng-table": "~0.3.3",
+    "ngDialog": "~0.3.7"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.2",
