Jersey version changed

--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <org.hsqldb.version>2.3.2</org.hsqldb.version>
         <commons-dbcp.version>1.4</commons-dbcp.version>
         <junit.version>4.11</junit.version>
-        <org.eclipse.jetty.jetty-maven-plugin.version>9.1.1.v20140108</org.eclipse.jetty.jetty-maven-plugin.version>
+        <org.eclipse.jetty.jetty-maven-plugin.version>9.3.0.M1</org.eclipse.jetty.jetty-maven-plugin.version>
     </properties>
 
     <prerequisites>
