--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,9 @@
     "fontawesome": "~4.1.0",
     "d3": "3.5.2",
     "ng-table": "~0.3.3",
-    "ngDialog": "~0.3.7"
+    "ngDialog": "~0.3.7",
+    "tree-model-bower" : "git://github.com/bikezilla/tree-model-bower",
+    "jquery-ui": "1.11.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.2",
