--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,9 @@
     "jquery-ui": "1.11.1",
     "angular-strap": "2.1.5",
     "angular-smart-table": "~2.0.1",
-    "vis": "3.10.0"
+    "vis": "3.10.0",
+    "angular-breadcrumb": "~0.3.3",
+    "angular-ui-router": "~0.2.13"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.2",
@@ -35,4 +37,3 @@
     "angular-scenario": "~1.3.2"
   }
 }
-
